--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   <script src="estudo.js"></script>
   <link rel="stylesheet" href="geral.css">
 </head>
-
 <body>
+  <div class="aprendendo">
+     <input id="raiz" any only type="text"><br>
+    <button onclick="calculaESG">calcula</button>
+  </div>
   <input type="checkbox" id="calcFin">
 <div class="calculadora">
   <label for="calcFin"><h3>Financeira</h3></label>
@@ -42,4 +45,3 @@
 
 </body>
 </html>
-
