--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   <script src="estudo.js"></script>
   <link rel="stylesheet" href="geral.css">
 </head>
+
 <body>
+
   <div class="aprendendo">
      <input id="raiz" any only type="text"><br>
+     <input id="a" placeholder="Digite a" type="text"><br>
     <button onclick="calculaESG">calcula</button>
+
   </div>
   <input type="checkbox" id="calcFin">
 <div class="calculadora">
